--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .next && rm -rf node_modules"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "@headlessui/react": "^1.7.18",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/supabase-js": "^2.39.3",
