--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,4 @@
-
-
-# services:
-#   backend:
-#     build: ./backend
-#     ports:
-#       - "5000:5000"
-#     env_file:
-#       - backend/.env
-#     depends_on:
-#       - db
-#     restart: always
-
-#   frontend:
-#     build: ./frontend
-#     ports:
-#       - "3000:3000"
-#     depends_on:
-#       - backend
-#     restart: always
-
-#   db:
-#     image: postgres:15
-#     restart: always
-#     environment:
-#       POSTGRES_USER: myuser
-#       POSTGRES_PASSWORD: mypassword
-#       POSTGRES_DB: mydatabase
-#     ports:
-#       - "5432:5432"
-#     volumes:
-#       - postgres_data:/var/lib/postgresql/data
-
-# volumes:
-#   postgres_data:
-
-
-
-# version: '3.8'
+version: '3.8'
 
 services:
   backend:
@@ -51,6 +13,11 @@ services:
     restart: always
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   frontend:
     build: ./frontend
