Fix frontend port mapping in docker-compose.yml to expose on port 3000

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,10 @@ services:
   frontend:
     build: ./frontend
     container_name: teenz-frontend
+    # ports:
+    #   - "80:3000" 
     ports:
-      - "80:3000" # Frontend exposed on port 80 (public HTTP)
+      - "3000:3000" 
     depends_on:
       - backend
     restart: always
