--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,5 @@
-# name: Deploy Academics Pro
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
-
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v2
-
-#       - name: Log in to Docker Hub
-#         uses: docker/login-action@v2
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-
-#       - name: Build and push backend image
-#         run: |
-#           docker build -t ${{ secrets.DOCKER_USERNAME }}/academicspro-backend:latest ./backend
-#           docker push ${{ secrets.DOCKER_USERNAME }}/academicspro-backend:latest
-
-#       - name: Build and push frontend image
-#         run: |
-#           docker build -t ${{ secrets.DOCKER_USERNAME }}/academicspro-frontend:latest ./frontend
-#           docker push ${{ secrets.DOCKER_USERNAME }}/academicspro-frontend:latest
-
-#       - name: Deploy on VPS
-#         uses: appleboy/ssh-action@v0.1.4
-#         with:
-#           host: ${{ secrets.VPS_HOST }}
-#           username: ${{ secrets.VPS_USER }}
-#           password: ${{ secrets.VPS_PASSWORD }}
-#           script: |
-#             docker pull ${{ secrets.DOCKER_USERNAME }}/academicspro-backend:latest
-#             docker pull ${{ secrets.DOCKER_USERNAME }}/academicspro-frontend:latest
-#             docker-compose up -d
-
-
-name: Deploy Academics Pro
+# This is a GitHub Actions workflow file that builds and pushes Docker images for the teenz skin project.
+name: Deploy teenz skin
 
 on:
   push:
@@ -70,10 +25,10 @@ jobs:
 
       - name: Build and push backend image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/academicspro-backend:latest ./backend
-          docker push ${{ secrets.DOCKER_USERNAME }}/academicspro-backend:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/teenzskin-backend:latest ./backend
+          docker push ${{ secrets.DOCKER_USERNAME }}/teenzskin-backend:latest
 
       - name: Build and push frontend image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/academicspro-frontend:latest ./frontend
-          docker push ${{ secrets.DOCKER_USERNAME }}/academicspro-frontend:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/teenzskin-frontend:latest ./frontend
+          docker push ${{ secrets.DOCKER_USERNAME }}/teenzskin-frontend:latest
