--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,16 +20,19 @@
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.18.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.309.0",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.3",
+    "react-toastify": "^11.0.5",
     "slugify": "^1.6.6",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.0",
@@ -37,6 +40,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "20.17.45",
     "@types/react": "18.3.21",
