--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.18.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.309.0",
     "next": "^14.1.0",
     "postcss": "^8.4.32",
@@ -43,6 +45,7 @@
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "20.17.45",
     "@types/react": "18.3.21",
     "@types/react-dom": "^18.2.0",
