--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -63,6 +64,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/date-fns": "^2.5.3",
     "@types/dotenv": "^8.2.3",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
