feat: add review form and list components for product reviews
- Implemented ReviewForm component to allow users to submit reviews with ratings and comments.
- Added ReviewList component to display approved reviews for a specific product.
- Updated Categories component to fetch categories from the API and display them dynamically.
- Enhanced FeaturedCollections component to fetch collections from the API and display them.
- Created usePayment hook to handle payment processing with Razorpay.
- Added Razorpay utility functions for loading the script and initializing payments.
- Refactored store management for cart operations to simplify state updates.
- Updated types for Category and Product to include new fields.
- Added package.json and package-lock.json for dependency management.

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 
 # Database URL
-#DATABASE_URL="postgresql://teenz_owner:npg_d8CaDk3UpriV@ep-silent-hall-a8n2wnc5-pooler.eastus2.azure.neon.tech/teenz?sslmode=require"
+# DATABASE_URL="postgresql://teenz_owner:npg_d8CaDk3UpriV@ep-silent-hall-a8n2wnc5-pooler.eastus2.azure.neon.tech/teenz?sslmode=require"
 
-DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydatabase"
-
+# DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydatabase"
+DATABASE_URL="postgresql://neondb_owner:npg_OKbzlsMcP9j8@ep-bitter-band-a8pktmvo-pooler.eastus2.azure.neon.tech/neondb?sslmode=require"
 # port number
 PORT = 5000
 
