--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.18.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -40,6 +41,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
