fix(nginx): correct comment formatting for frontend and backend sections

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,11 @@
-# Frontend: teenzskin.com
+# FRONTEND: teenzskin.com
 server {
     listen 80;
     server_name teenzskin.com www.teenzskin.com;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         return 301 https://$host$request_uri;
@@ -25,10 +29,14 @@ server {
     }
 }
 
-# Backend: api.teenzskin.com
+# BACKEND: api.teenzskin.com
 server {
     listen 80;
     server_name api.teenzskin.com;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         return 301 https://$host$request_uri;
