--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,7 @@ server {
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
+        try_files $uri =404;
     }
 
     location / {
@@ -12,22 +13,22 @@ server {
     }
 }
 
-# server {
-#     listen 443 ssl;
-#     server_name teenzskin.com www.teenzskin.com;
+server {
+    listen 443 ssl;
+    server_name teenzskin.com www.teenzskin.com;
 
-#     ssl_certificate /etc/letsencrypt/live/teenzskin.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/teenzskin.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/teenzskin.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/teenzskin.com/privkey.pem;
 
-#     location / {
-#         proxy_pass http://frontend:3000;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
 
 # BACKEND: api.teenzskin.com
 server {
@@ -36,6 +37,7 @@ server {
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
+        try_files $uri =404;
     }
 
     location / {
@@ -43,19 +45,19 @@ server {
     }
 }
 
-# server {
-#     listen 443 ssl;
-#     server_name api.teenzskin.com;
+server {
+    listen 443 ssl;
+    server_name api.teenzskin.com;
 
-#     ssl_certificate /etc/letsencrypt/live/api.teenzskin.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/api.teenzskin.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.teenzskin.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.teenzskin.com/privkey.pem;
 
-#     location / {
-#         proxy_pass http://backend:5000;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+    location / {
+        proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
