--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,69 +1,49 @@
-version: "3.8"
+# FRONTEND: teenzskin.com
+server {
+    listen 80;
+    server_name teenzskin.com www.teenzskin.com api.teenzskin.com;
 
-services:
-  backend:
-    build: ./backend
-    container_name: teenz-backend
-    env_file:
-      - backend/.env
-    ports:
-      - "5000:5000"
-    networks:
-      - app-network
-    depends_on:
-      - db
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
 
-  frontend:
-    build: ./frontend
-    container_name: teenz-frontend
-    networks:
-      - app-network
-    depends_on:
-      - backend
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
-  nginx:
-    image: nginx:stable-alpine
-    container_name: teenz-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
-    depends_on:
-      - frontend
-    networks:
-      - app-network
+# Enable this after SSL certificates are generated
+# server {
+#     listen 443 ssl;
+#     server_name teenzskin.com www.teenzskin.com;
 
-  certbot:
-    image: certbot/certbot
-    container_name: teenz-certbot
-    volumes:
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --quiet --post-hook \"nginx -s reload\"; sleep 12h & wait $${!}; done'"
-    networks:
-      - app-network
+#     ssl_certificate /etc/letsencrypt/live/teenzskin.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/teenzskin.com/privkey.pem;
 
-  db:
-    image: postgres:15
-    container_name: teenz-db
-    environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - app-network
+#     location / {
+#         proxy_pass http://frontend:3000;
+#         proxy_http_version 1.1;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
 
-volumes:
-  postgres_data:
-  certbot-etc:
-  certbot-webroot:
+# server {
+#     listen 443 ssl;
+#     server_name api.teenzskin.com;
 
-networks:
-  app-network:
+#     ssl_certificate /etc/letsencrypt/live/api.teenzskin.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/api.teenzskin.com/privkey.pem;
+
+#     location / {
+#         proxy_pass http://backend:5000;
+#         proxy_http_version 1.1;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
