fix(nginx): uncomment SSL server blocks for frontend and API configurations

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,36 +14,36 @@ server {
 }
 
 # Enable this after SSL certificates are generated
-# server {
-#     listen 443 ssl;
-#     server_name teenzskin.com www.teenzskin.com;
+server {
+    listen 443 ssl;
+    server_name teenzskin.com www.teenzskin.com;
 
-#     ssl_certificate /etc/letsencrypt/live/teenzskin.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/teenzskin.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/teenzskin.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/teenzskin.com/privkey.pem;
 
-#     location / {
-#         proxy_pass http://frontend:3000;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
 
-# server {
-#     listen 443 ssl;
-#     server_name api.teenzskin.com;
+server {
+    listen 443 ssl;
+    server_name api.teenzskin.com;
 
-#     ssl_certificate /etc/letsencrypt/live/api.teenzskin.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/api.teenzskin.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.teenzskin.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.teenzskin.com/privkey.pem;
 
-#     location / {
-#         proxy_pass http://backend:5000;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+    location / {
+        proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
