--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,29 +16,28 @@ server {
 # HTTPS server for frontend domains
 server {
     listen 443 ssl;
-    server_name teenzskin.com www.teenzskin.com api.teenzskin.com;
+    server_name teenzskin.com www.teenzskin.com;
 
     ssl_certificate /etc/letsencrypt/live/teenzskin.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/teenzskin.com/privkey.pem;
 
-    # Frontend proxy for teenzskin.com and www.teenzskin.com
-    location / {
-        # Only proxy frontend for these two hosts:
-        if ($host = "teenzskin.com") {
-            proxy_pass http://frontend:3000;
-            break;
-        }
-        if ($host = "www.teenzskin.com") {
-            proxy_pass http://frontend:3000;
-            break;
-        }
-        # Otherwise proxy backend for api.teenzskin.com
+    # Proxy API requests to backend
+    location /api/ {
         proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    # All other requests to frontend
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
