in env frontend url updated

--- a/backend/.env
+++ b/backend/.env
@@ -22,7 +22,7 @@ CLOUDINARY_API_SECRET=nvIbk8zeLWC1fFEEMHFm1jFwzaM
 JWT_SECRET=qwertyuiohgfd
 
 
-FRONTEND_URL= https://academics-pro.com
+FRONTEND_URL= https://teenzskin.com/
 
 # mail server
 
